[package]
name = "netnews-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nnw"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
feed-rs = "2"
html2text = "0.12"
md5 = "0.7"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
